--- a/fixdate.html
+++ b/fixdate.html
@@ -14,6 +14,17 @@
         <button onclick="sendInvitation()">Send Invitation</button>
         <div id="confirmationMessage"></div>
     </div>
-    <script> </script>
+    <script> 
+    function sendInvitation() {
+    const dateInput = document.getElementById('dateInput').value;
+    
+    // Assume some backend API for sending invitations
+    // You would typically use AJAX or fetch to communicate with the server
+    // For simplicity, let's just display a confirmation message here
+    const confirmationMessage = document.getElementById('confirmationMessage');
+    confirmationMessage.innerHTML = `Invitation sent for ${dateInput}!`;
+}
+
+    </script>
 </body>
 </html>
