--- a/yes.html
+++ b/yes.html
@@ -18,5 +18,8 @@
         Let's Fix a Date
       </button>
     </div>
+    <script> function nextPage() {
+            window.location.href = "fixdate.html";
+          }</script>
   </body>
 </html>
