--- a/fixdate.html
+++ b/fixdate.html
@@ -14,6 +14,12 @@
         <button onclick="sendInvitation()">Send Invitation</button>
         <div id="confirmationMessage"></div>
     </div>
+    <div class="gif_container">
+        <img
+          src="https://media.tenor.com/6XTLHcFj51sAAAAM/cant-wait.gif"
+          alt="Cute animated illustration"
+        />
+      </div>
     <script> 
     function sendInvitation() {
     const dateInput = document.getElementById('dateInput').value;
