--- a/fixdate.html
+++ b/fixdate.html
@@ -8,18 +8,19 @@
 </head>
 <body>
     <div class="container">
-        <h1>Asking for Date</h1>
-        <label for="dateInput">Select a Date:</label>
-        <input type="datetime-local" id="dateInput" required>
-        <button onclick="sendInvitation()">Send Invitation</button>
-        <div id="confirmationMessage"></div>
-    </div>
-    <div class="gif_container">
+         <div class="gif_container">
         <img
           src="https://media.tenor.com/6XTLHcFj51sAAAAM/cant-wait.gif"
           alt="Cute animated illustration"
         />
       </div>
+        <h1>Let's Fix a date</h1>
+        <label for="dateInput">Select a Date:</label>
+        <input type="datetime-local" id="dateInput" required>
+        <button onclick="sendInvitation()">Date Fixed !! </button>
+        <div id="confirmationMessage"></div>
+    </div>
+   
     <script> 
     function sendInvitation() {
     const dateInput = document.getElementById('dateInput').value;
