--- a/fixdate.html
+++ b/fixdate.html
@@ -25,11 +25,9 @@
     function sendInvitation() {
     const dateInput = document.getElementById('dateInput').value;
     
-    // Assume some backend API for sending invitations
-    // You would typically use AJAX or fetch to communicate with the server
-    // For simplicity, let's just display a confirmation message here
+    
     const confirmationMessage = document.getElementById('confirmationMessage');
-    confirmationMessage.innerHTML = `Invitation sent for ${dateInput}!`;
+    confirmationMessage.innerHTML = 'Invitation sent for ${dateInput}  meet you soon!';
 }
 
     </script>
