--- a/fixdate.html
+++ b/fixdate.html
@@ -27,7 +27,7 @@
     
     
     const confirmationMessage = document.getElementById('confirmationMessage');
-    confirmationMessage.innerHTML = 'Invitation sent for ${dateInput}  meet you soon!';
+    confirmationMessage.innerHTML = `Date Timing: ${dateInput} meet soon!`;
 }
 
     </script>
