--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <body>
     <div class="container">
       <div>
-        <h1 class="header_text">Do you wanna go out with me?</h1>
+        <h1 class="header_text">Do you wanna go out with me shashank ?</h1>
+        <h2> For a Waffle Date?</h2>
       </div>
       <p>
         <a href="https://www.instagram.com/untoldcoding/"></a>
