Add class to h2 for styling consistency

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div>
         <h1 class="header_text">Do you wanna go out with me shashank ?</h1>
-        <h2> For a Waffle Date?</h2>
+        <h2 class="header_text"> For a Waffle Date?</h2>
       </div>
       <p>
         <a href="https://www.instagram.com/untoldcoding/"></a>
